--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,8 @@
 \input{classicthesis-config}
 
 \usepackage{titletoc}
+\usepackage{tikz}
+\usetikzlibrary{shapes,arrows,positioning}
 \renewcommand{\lstlistingname}{Figure}% Listing -> Figure
 
  % Add new own commands
@@ -40,6 +42,7 @@
 
 \titleformat{\chapter}[display]{\normalfont\Huge\bfseries}{\chaptertitlename\ \thechapter.}{0.42em}{}
 \titleformat{\section}{\bfseries}{\thesection}{1em}{}
+
 
 \titleformat{\subsection}{\bfseries}{\thesubsection}{1em}{}
 
